--- a/src/diagramador/latex/templates/braun.cls
+++ b/src/diagramador/latex/templates/braun.cls
@@ -1238,6 +1238,8 @@
 
 	}
 
+\tl_set:Nn \l_hedgedoc_path_tl {/var/lib/docker/volumes/hedgedoc_uploads/_data/}
+
 % #1 -> coffin
 % #2 -> content
 \cs_set:Nn \braun_graphics_box:Nn
@@ -1287,16 +1289,16 @@
         \IfValueT {#1} { \keys_set:nn { braun/graphics } {#1} }
         \file_parse_full_name:nNNN {#2} \l_tmpa_tl \l_tmpb_tl \l_tmpc_tl
 
-		/var/lib/docker/volumes/hedgedoc_uploads/_data/ \l_tmpb_tl \l_tmpc_tl
+		\l_hedgedoc_path_tl \l_tmpb_tl \l_tmpc_tl
         \str_case:VnF \l_tmpc_tl
             {
                 { .svg }
                 { 
-                    \braun_include_svg:Nn \l_tmpa_coffin { /var/lib/docker/volumes/hedgedoc_uploads/_data/ \l_tmpb_tl \l_tmpc_tl }
+                    \braun_include_svg:Nn \l_tmpa_coffin { \l_hedgedoc_path_tl \l_tmpb_tl \l_tmpc_tl }
                 }      
             }
             {
-                \braun_include_graphics:Nn \l_tmpa_coffin { /var/lib/docker/volumes/hedgedoc_uploads/_data/ \l_tmpb_tl \l_tmpc_tl }
+                \braun_include_graphics:Nn \l_tmpa_coffin { \l_hedgedoc_path_tl \l_tmpb_tl \l_tmpc_tl }
             }
 
         \coffin_typeset:Nnnnn \l_tmpa_coffin {l} {vc} {0pt} {0pt}
